# stack_overflow_detection

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
